feat: updated booking page

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 <img src="./assets/images/location.png" alt="location-of-global-fun-city" width="1485" height="550">
 </div>
 
-<footer>
+<footer class="footer_for_gfc">
 <div class="logo">
 <img src="./assets/images/globalfuncitylogo.png" class="footer-logo" alt="logo">
 </div>
@@ -308,7 +308,7 @@
 </div>
 <hr>
 <div class="copyright">
-<p>Global Fun City &#169; 2022. All rights Reserved.
+<p>Global Fun City &#169; 2023. All rights Reserved.
     <br>Site designed by Vignesh.in
 </p>
 </div>
