--- a/pages/book now/selectrooms.html
+++ b/pages/book now/selectrooms.html
@@ -2,27 +2,27 @@
 <html lang="en">
 
     <head>
-        <meta charset="UTF-8">
-        <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
-        <title>Book Now - Global Fun City </title>
-        <link rel="stylesheet" href="../../assets/book now css/selectrooms.css">
+<meta charset="UTF-8">
+<link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
+<title>Book Now | Select Rooms | Global Fun City </title>
+<link rel="stylesheet" href="../../assets/book now css/selectrooms.css">
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter+Tight&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Nanum+Pen+Script&family=Open+Sans:wght@700&family=Poppins:wght@300;500&family=Reem+Kufi&family=Sacramento&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter+Tight&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Nanum+Pen+Script&family=Open+Sans:wght@700&family=Poppins:wght@300;500&family=Reem+Kufi&family=Sacramento&display=swap" rel="stylesheet">
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500&family=Poppins:wght@300;500&family=Rubik+Microbe&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500&family=Poppins:wght@300;500&family=Rubik+Microbe&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
     </head>
     <body>
 
 
 <div class="header">
-<a href="../../pages/homepage/index-profile.html">
+<a href="../../index.html">
 <img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo">
 </a>
 <nav class="navbar">
@@ -385,7 +385,7 @@ li2.innerText = 'Breakfast included';
 ul.appendChild(li1);
 ul.appendChild(li2);
 const p = document.createElement('p');
-p.innerText = 'Book your stay now at Global Fun City at best available rates!!';
+p.innerText = 'For the lowest rates, reserve your stay at Global Fun City right now!';
 roomWithBreak.appendChild(g);
 roomWithBreak.appendChild(h4b);
 roomWithBreak.appendChild(ul);
