--- a/pages/homepage/profile.html
+++ b/pages/homepage/profile.html
@@ -31,6 +31,11 @@
             <nav class="navbar">
                 <ul>
                     <li>
+                        <a class="navigation__link" href="../../index.html">
+                            <b>HOME</b>
+                        </a>
+                    </li>
+                    <li>
                         <a class="navigation__link" href="../../pages/other pages/home.html">
                             <b>ABOUT</b> 
                         </a> 
@@ -77,6 +82,20 @@
                 </a>
             </div>
         </div>
+        <div class="total-homepages-div"> 
+            <!-- Total Homepage div -->
+        <div class="homepages">
+            <a href="../../index.html">Home <i class="fa-light fa-greater-than" style="color: #655b5b;"></i></a>
+        </div> &nbsp;
+        <div class="homepages">
+            <a href="../../pages/homepage/main.profile.html">Account <i class="fa-light fa-greater-than" style="color: #655b5b;"></i></a>
+        </div> &nbsp;
+        <div class="homepages">
+            <a href="../../pages/homepage/profile.html">Account Settings </a>
+        </div> 
+
+        </div>
+        <!-- Completing Div -->
 
         <div class="all-content">
 
@@ -183,6 +202,7 @@
 
         </div>
 
+        
         <script>
 // js for change image
 const loadFile = function (event) {
