--- a/pages/other pages/ticketprices.html
+++ b/pages/other pages/ticketprices.html
@@ -118,7 +118,7 @@
                         <h3>Adult
                             Ticket </h3>
                         <h2>
-                            $<span class="price-colour">90</span>/person
+                            $<span class="price-colour">80</span>/person
                         </h2>
                         <p>This ticket grants access to waterpark attractions, including waterslides, pools.</p>
                         <button class="btn-book-now" id="btn-booknow-adult">
@@ -131,7 +131,7 @@
                             Ticket
                         </h3>
                         <h2>
-                            $<span class="price-colour">75</span>/person(90-130cm Height)
+                            $<span class="price-colour">65</span>/person(90-130cm Height)
                         </h2>
                         <p>This ticket grants access to waterpark attractions, including waterslides, pools.</p>
                         <button class="btn-ticket-book-now" id="btn-booknow-children">
@@ -166,7 +166,7 @@
                 </a>
             </div>
             <div class="privacypolicy">
-                <input type="radio" id="agree" required>	
+                <input type="checkbox" id="agree" required>	
                 <label for="agree">
                     I agree to the <a href="../../pages/footer other pages/privacypolicy.html" target="_blank">Privacy Policy</label> </a>
 	</div>
