--- a/pages/book now/guestinformation.html
+++ b/pages/book now/guestinformation.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
-        <title>Book Now - Global Fun City </title>
+        <title>Book Now | Checking details | Global Fun City </title>
         <link rel="stylesheet" href="../../assets/book now css/guestinformation.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -192,9 +192,9 @@
 
 
 <div class="button-for-cancel-accept">
-    <button class="btn-cancel"> <i class="fa-solid fa-arrow-left"></i> Cancel</button> &nbsp;
-    <button class="btn-accept">Accept <i class="fa-solid fa-arrow-right"></i></button>
-    </div>
+    <button class="btn-cancel" id="btn-cancel-ticket" type="submit" onclick="CancelDetail()"> <i class="fa-solid fa-arrow-left"></i> Cancel</button> &nbsp;
+    <button class="btn-accept" id="btn-accept-ticket" type="submit" onclick="AcceptDetail()">Accept <i class="fa-solid fa-arrow-right"></i></button>
+</div>
 
 
 
@@ -204,34 +204,34 @@
 
 
 
-            <div class="background-footer">
+<div class="background-footer">
 
-                <div class="navbar-footer-logo">
-                    <img src="../../assets/images/globalfuncitylogo.png" width="200" alt="logo">
-                </div>
+    <div class="navbar-footer-logo">
+        <img src="../../assets/images/globalfuncitylogo.png" width="200" alt="logo">
+    </div>
 
-                <div class="address">
-                    <p>11113 W Baldwin RD, Monrovia, MD 21770, USA</p>
-                    <h4>
-                        <i class="fa-solid fa-phone"></i> +1 860 817 1080
-                    </h4>
-                    <h4>
-                        <i class="fa-solid fa-envelope"></i> info@globalfuncity.in
-                    </h4>
-                </div>
+    <div class="address">
+        <p>11113 W Baldwin RD, Monrovia, MD 21770, USA</p>
+        <h4>
+            <i class="fa-solid fa-phone"></i> +1 860 817 1080
+        </h4>
+        <h4>
+            <i class="fa-solid fa-envelope"></i> info@globalfuncity.in
+        </h4>
+    </div>
 
-                <div class="other-policies">
-                    <a href="#">Book now Policy</a>
-                </div>
-            </div>
+    <div class="other-policies">
+        <a href="#">Book now Policy</a>
+    </div>
+</div>
 
 </body>
 
 <script>
 
-const reservationDetails = JSON.parse(localStorage.getItem("reservationDetails"));
-
-for(let i = 0; i < 1; i++){
+//const reservationDetails = JSON.parse(localStorage.getItem("reservationDetails"));
+const bookedDetail = JSON.parse(sessionStorage.getItem("formDetail"));
+//for(let i = 0; i < 1; i++){
 // create table element
 const table = document.createElement("table");
 
@@ -246,42 +246,47 @@ table.appendChild(trHeaders);
 // create table rows
 const tr1 = document.createElement("tr");
 const td1 = document.createElement("td");
+td1.className = "important_datas";
 td1.textContent = "Email";
 const td2 = document.createElement("td");
-td2.textContent = reservationDetails[i]["emailAddress"];
+td2.textContent = bookedDetail["emailAddress"];
 tr1.appendChild(td1);
 tr1.appendChild(td2);
 table.appendChild(tr1);
 
 const tr2 = document.createElement("tr");
 const td3 = document.createElement("td");
+td3.className = "important_datas";
 td3.textContent = "Check In";
 const td4 = document.createElement("td");
-td4.textContent = reservationDetails[i]["checkInDate"];
+td4.textContent = bookedDetail["checkInDate"];
 tr2.appendChild(td3);
 tr2.appendChild(td4);
 table.appendChild(tr2);
 
 const tr3 = document.createElement("tr");
 const td5 = document.createElement("td");
+td5.className = "important_datas";
 td5.textContent = "Check Out";
 const td6 = document.createElement("td");
-td6.textContent = reservationDetails[i]["checkOutDate"];
+td6.textContent = bookedDetail["checkOutDate"];
 tr3.appendChild(td5);
 tr3.appendChild(td6);
 table.appendChild(tr3);
 
 const tr4 = document.createElement("tr");
 const td7 = document.createElement("td");
+td7.className = "important_datas";
 td7.textContent = "Guests";
 const td8 = document.createElement("td");
-td8.textContent = reservationDetails[i]["adultCount"] + " " + "Adult" + " " + reservationDetails[i]["childrenCount"] + " " +  "Children";
+td8.textContent = bookedDetail["adultCount"] + " " + "Adult" + " " + bookedDetail["childrenCount"] + " " +  "Children";
 tr4.appendChild(td7);
 tr4.appendChild(td8);
 table.appendChild(tr4);
 
 const tr5 = document.createElement("tr");
 const td9 = document.createElement("td");
+td9.className = "important_datas";
 td9.textContent = "Ticket";
 const td10 = document.createElement("td");
 td10.textContent = "Adult: $90 | Children: $75 (Per head)";
@@ -291,6 +296,7 @@ table.appendChild(tr5);
 
 const tr6 = document.createElement("tr");
 const td11 = document.createElement("td");
+td11.className = "important_datas";
 td11.textContent = "Sub Total";
 const td12 = document.createElement("td");
 td12.textContent = "$1600";
@@ -300,6 +306,7 @@ table.appendChild(tr6);
 
 const tr7 = document.createElement("tr");
 const td13 = document.createElement("td");
+td13.className = "important_datas";
 td13.textContent = "Grand Total";
 const td14 = document.createElement("td");
 td14.textContent = "$1600";
@@ -310,7 +317,23 @@ table.appendChild(tr7);
 
 document.querySelector("div.in-out").append(table);
     
+//To Cancel the ticket:
+
+function CancelDetail(){
+const arraySession = JSON.parse(sessionStorage.getItem("formDetail"));
+const gettingArrayLocal = JSON.parse(localStorage.getItem("reservationDetails"));
+
+for(let i = 0; i<gettingArrayLocal.length; i++){
+if(gettingArrayLocal[i].reservationUniqueId === arraySession.reservationUniqueId){
+    gettingArrayLocal.splice(gettingArrayLocal[i], 1);
+    sessionStorage.removeItem("formDetail");
+    alert("Are you sure you want to cancel your ticket");
+}
+}
+window.location.href = "../../pages/other pages/booknow.html"
 }
 </script>
 <script src="../../js/header.js"></script>
+
+
 </html>
