--- a/pages/homepage/main.profile.html
+++ b/pages/homepage/main.profile.html
@@ -29,6 +29,11 @@
             <nav class="navbar">
                 <ul>
                     <li>
+                        <a class="navigation__link" href="../../index.html">
+                            <b>HOME</b>
+                        </a>
+                    </li>
+                    <li>
                         <a class="navigation__link" href="../../pages/other pages/home.html">
                             <b>ABOUT</b> 
                         </a> 
@@ -75,6 +80,20 @@
                 </button>
             </div>
         </div>
+
+        <div class="total-homepages-div"> 
+            <!-- Total Homepage div -->
+        <div class="homepages">
+            <a href="../../index.html">Home <i class="fa-light fa-greater-than" style="color: #655b5b;"></i></a>
+        </div> &nbsp;
+        <div class="homepages">
+            <a href="../../pages/homepage/main.profile.html">Account </a>
+        </div>
+        </div>
+
+        </div>
+        <!-- Completing Div -->
+
 
         <div class="image">
             <img src="../../assets/images/global-account-logo.png" width="300px" alt="account-logo">
@@ -125,7 +144,7 @@
                 </div>
     
                 <span class="arrow">
-                    <a href="../../pages/homepage/user_orders.html">
+                    <a href="">
                         <i class="fa-solid fa-angle-right"></i> 
                     </a>
                 </span>
@@ -139,7 +158,7 @@
                 <div class="account-manage">
                     <div class="account">
                         <h1>
-                            <a href="">
+                            <a href="../../pages/homepage/user_orders.html">
                                 <i class="fa-solid fa-bag-shopping"></i> &NonBreakingSpace; Your Orders
                             </a>
                         </h1>
