--- a/pages/homepage/user_order_detail.html
+++ b/pages/homepage/user_order_detail.html
@@ -8,7 +8,7 @@
         <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
 
         <title> Global Fun City </title>
-        <link rel="stylesheet" href="../../assets/homepage css/user_orders.css">
+        <link rel="stylesheet" href="../../assets/homepage css/user_order_detail.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -80,7 +80,7 @@
                 </button>
             </div>
         </div>
-
+<div class="background-color-for-whole-page" style="background-color: #eee; height: 600px;">
         <div class="total-homepages-div"> 
             <!-- Total Homepage div -->
         <div class="homepages">
@@ -90,42 +90,75 @@
             <a href="../../pages/homepage/main.profile.html">Account <i class="fa-light fa-greater-than" style="color: #655b5b;"></i></a>
         </div> &nbsp;
         <div class="homepages">
-            <a href="../../pages/homepage/user_orders.html">Your Orders </a>
+            <a href="../../pages/homepage/user_orders.html">Your Orders <i class="fa-light fa-greater-than" style="color: #655b5b;"></i></a>
+        </div> &nbsp;
+        <div class="homepages">
+            <a href="../../pages/homepage/user_order_detail.html">Order Detail</a>
         </div>
 
         </div>
         <!-- Completing Div -->
 
-        <div class="font-your-orders">
-            <h2>Your Orders</h2>
-            </div>
-        
-        <div class="total-div-for-user-order" style="display: flex;
-        flex-wrap: wrap;">
-
-
-        <!-- <div class="image-of-product">
-            <img src = "https://iili.io/HX7ia1I.jpg" width="200px" height="200px" alt="shirt">
+<!-- Starting ticket detail -->
+<div class="background-color-for-detail">
+    <div class="box">
+        <div class="delivery-address">
+            <h3 class="delivery-address-h3">Delivery Address</h3>
+            <h5 class="name-of-the-user">Hello</h5>
+            <p class="delivery-address-of-the-user">
+                2/47 Keela Krishnan Kovil St, Keelapudur road, Palakarai, Trichy-1. <br> Trichy, Tiruchirappalli - 620001, Tamil Nadu
+            </p>
+            <p class="zip-code">ZIP Code: 000001</p>
+            <p class="phone-number">Phone Number  &nbsp; 1234567890</p>
         </div>
 
-        <div class="product-name">
-            <h3>White T- Shirt with logo</h3>
-            <p>$10.00</p>
-            <a href=""><p>View Details</p></a>
-        </div> -->
-
-        
-
-        <div class="card">
-            <div class="card-details">
-              <img src = "https://iili.io/HX7ia1I.jpg" class="text-title" width="180px" height="180px" alt="shirt">
-              <p class="text-title">White T - shirt</p>
-              <p class="text-body">$100.00</p>
+        <div class="more-actions">
+            <h3 class="more-actions-h3">More Actions</h3>
+            <!-- Div for download and display -->
+            <div class="download-invoice-div-flex">
+            <div class="download-invoice-div">
+                <p class="download-icon"><i class="fa-sharp fa-solid fa-file"></i> Download Invoice</p>
             </div>
-            <button class="card-button"><a href ="../../pages/homepage/user_order_detail.html"> View Details </a></button>
-          </div>
+            &NonBreakingSpace;
+            <div class="btn-download">
+                <button class="btn-download-invoice">Download</button>
+            </div>
+</div>   
+<!-- Closed div for flex -->
+        </div>
+    </div>
+</div>
+<!-- 
+Starting Product detail -->
+<br> <br> <br>
+<div class="background-color-for-product-detail">
+    <!-- Flex for Product -->
+    <div class="flex-of-product">
+    <div class="product-image">
+        <img src="https://iili.io/HX7ia1I.jpg" class="product-chosen-by-user" width="180px" height="180px" alt="shirt">
+    </div>
+    <div class="product-name">
+        <h4 class="name-of-the-product">White T-Shirt With Logo</h4>
+        <h5 class="size-of-the-product">Size : M</h5>
+        <h5 class="price-of-the-product">Price : $100.00</h5>
+    </div>
+    </div>
 
-          </div>
+    <div class="quantity-total-price">
+        <h5 class="qty-of-the-product">Qty : 01</h5>
+        <h5 class="total-price-of-the-product">Total Price : $100.00</h5>
+        <h5 class="shipping-details-of-the-product">Delivery Status : Shipped</h5>
+    </div>
+
+    <div class="order-id-needhelp">
+        <h5 class="order-id">Order ID : 1234567890</h5>
+        <h5 class="need-help"><i class="fa-solid fa-square-question"></i> <a href="">Need Help</a></h5>
+    </div>
+</div>
+
+
+
+</div>
         <script src="../../js/header.js"></script>
-    </body>
-</html>
+        </body>
+        </html>
