--- a/pages/shop/whitetshirt.html
+++ b/pages/shop/whitetshirt.html
@@ -428,10 +428,9 @@ add_products_to_bag.addEventListener("click", function () {
     const products = JSON.parse(localStorage.getItem("clothing_details"));
 
     const check_product = products.find((e) => e.product_uuid == product_id);
-    console.log(check_product);
+    check_product["product_qty"] = 1;
 
-    const array_for_products =
-      JSON.parse(localStorage.getItem("add_to_cart_products")) || [];
+    const array_for_products = JSON.parse(localStorage.getItem("add_to_cart_products")) || [];
 
     const exist = array_for_products.find((e) => e.product_uuid == product_id);
 
@@ -440,12 +439,9 @@ add_products_to_bag.addEventListener("click", function () {
     } else {
       array_for_products.push(check_product);
 
-      localStorage.setItem(
-        "add_to_cart_products",
-        JSON.stringify(array_for_products)
-      );
+      localStorage.setItem("add_to_cart_products",JSON.stringify(array_for_products));
 
-      console.log(array_for_products);
+      //console.log(array_for_products);
       alert("This Product was added to your's bag.");
       window.location.href = "../../pages/shop/cart.html";
     }
